test/fail/basic_syntax/elif_without_if.lly
#[
SyntaxError: 'elif' without 'if'.
Where: File "elif_without_if.lly" at line 6
]#

elif
